components/work/work.css
.work{
    padding-bottom:12em;
}

.firstSection{
    background-color: var(--main-bg-color);
}

.secondSection{
    padding: 1em;
}

.CompaniesWorked{
    background-color: var(--component-bg-color);
    border-radius: 1.7em;
    box-shadow: var(--boxShadow);
    margin: 1em;
}

.profileImg{
    grid-area:profileImg;
}

.logoLink{
    grid-area:logo;
    max-width:15vw;
}

.workExperienceHeader{
    text-align: center;
    padding:.5em;
    border-bottom: 1px solid var(--main-bg-color);
}

.jobTitle{
    grid-area:jobTitle;
}

.desc{
    grid-area:desc;
    font-weight: bold;
}

.length{
    grid-area:length;
}

.referenceName{
    grid-area:referenceName;
    text-align: right;
}

.position{
    grid-area:position;
    text-align: right;
}

.company{
    grid-area:company;
    text-align: right;
}

.imgUrl{
    grid-area:imgUrl;
    border-radius: 50%;
    width: 100%;
}

.Recommendations{
    display: grid;
    grid-template-columns: 1fr;
    row-gap: 4%;
}

.recommendationCard{
    background-color: var(--component-bg-color);
    border-radius: 1.7em;
    padding:2em;
    display: grid;
    grid-template-rows: auto;
    grid-template-columns: 10em 3fr;

    grid-template-areas: 
    "imgUrl referenceName"
    "imgUrl position"
    "imgUrl company"
    "referenceText referenceText";
}

.recommendationCard:not(:last-child){
    margin-bottom: 1em;
}

.referenceText{
    grid-area:referenceText;
    font-style: italic;
    padding-top: 1.5em;
}

.companyProfile{
    padding: 1em;
    align-items: center;
    display: grid;
    column-gap: 2em;
}

@media (max-width:1000px){
    .work .companyProfile{
        margin:2em;
        border-bottom: 1px solid var(--main-bg-color);
        row-gap:1em;
        grid-template-areas:
        "logo"
        "jobTitle"
        "length"
        "desc";
    }
}

@media (min-width:1001px){
    .work{
        padding-bottom:3em;
    }

    .Recommendations{
        display: grid;
        grid-template-columns: 1fr 1fr;
        column-gap: 4%;
    }

    .firstSection{
        background-image: url(https://images.unsplash.com/photo-1561494653-744c43aed0c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1929&q=80);
        background-repeat: no-repeat;
        background-size:cover;
        background-position: 80%;
        padding: 4% 4% 4% 40%;
    }

    .companyProfile{
        grid-template-columns: 3fr 5fr 1fr;
        grid-template-rows: 1fr 2fr;
        grid-template-areas: 
        "logo jobTitle length"
        "logo desc     length";
    }
}

